// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inline suggest Case 0 different parent block 1`] = `"doc(paragraph(inline_suggest_c47(\\"/check\\")))"`;

exports[`inline suggest Case 1 different parent block 1`] = `"doc(paragraph(\\"hello \\", inline_suggest_c47(\\"/check\\")))"`;

exports[`inline suggest Case 2 different parent block 1`] = `"doc(paragraph(\\"hello\\"), paragraph(\\"hello\\"), paragraph(\\"hello \\", inline_suggest_c47(\\"/check\\")))"`;

exports[`inline suggest Case 3 different parent block 1`] = `"doc(bullet_list(list_item(paragraph(\\"hello \\", inline_suggest_c47(\\"/check\\")))))"`;

exports[`inline suggest Case 4 different parent block 1`] = `"doc(todo_list(todo_item(paragraph(\\"hello \\", inline_suggest_c47(\\"/check\\")))))"`;

exports[`inline suggest Case 5 different parent block 1`] = `"doc(ordered_list(list_item(paragraph(\\"hello \\", inline_suggest_c47(\\"/check\\")))))"`;

exports[`inline suggest Case 6 different parent block 1`] = `"doc(blockquote(heading(\\"hello \\", inline_suggest_c47(\\"/check\\"))))"`;

exports[`inline suggest Case 7 different parent block 1`] = `"doc(blockquote(heading(\\"hello\\")), paragraph(inline_suggest_c47(\\"/check\\")))"`;

exports[`inline suggest types a trigger 1`] = `
<div
  id="test-editor"
>
  <div
    class="ProseMirror bangle-editor content"
    contenteditable="true"
    tabindex="0"
  >
    <p>
      foobar 
      <span
        data-inline-command="true"
        data-trigger="/"
        style="color: #0052CC"
      >
        /check
      </span>
    </p>
  </div>
  <div
    data-show=""
    id="bangle-tooltip"
    role="tooltip"
    style="position: absolute; left: 0px; top: 0px; margin: 0px;"
  >
    <div
      class="bangle-tooltip-content"
    >
      hello world
    </div>
  </div>
</div>
`;

exports[`inline suggest when no trigger 1`] = `
<div
  id="test-editor"
>
  <div
    class="ProseMirror bangle-editor content"
    contenteditable="true"
    tabindex="0"
  >
    <p>
      foobar
    </p>
  </div>
  <div
    id="bangle-tooltip"
    role="tooltip"
  >
    <div
      class="bangle-tooltip-content"
    >
      hello world
    </div>
  </div>
</div>
`;
